--- a/MuzyNew/Cell/defaultRecordingListScreen.xib
+++ b/MuzyNew/Cell/defaultRecordingListScreen.xib
@@ -3,54 +3,66 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom1" rowHeight="89" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="DefaultRecordingCell" customModule="MuzyNew" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="323" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom1" rowHeight="65" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="DefaultRecordingCell" customModule="MuzyNew" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="388" height="56"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="323" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="388" height="56"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIu-Pg-5yA">
-                        <rect key="frame" x="38" y="20" width="36.333333333333343" height="20.333333333333329"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qEb-wf-Oos">
-                        <rect key="frame" x="252" y="15" width="41" height="40"/>
+                        <rect key="frame" x="302" y="8" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="DE8-zn-Fg9"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="41" id="DG1-Ax-dcB"/>
-                            <constraint firstAttribute="width" constant="41" id="RFz-7o-Nch"/>
+                            <constraint firstAttribute="height" constant="40" id="iPO-IH-zpB"/>
+                            <constraint firstAttribute="width" constant="40" id="kjm-az-f2B"/>
                         </constraints>
                         <state key="normal" title="Button" image="LightMode copy"/>
                         <connections>
                             <action selector="previewBtn:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="YG9-ud-OVQ"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0B-OQ-N3h">
+                        <rect key="frame" x="199" y="20" width="31" height="16"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" name="PlayPauseColorButton"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sample Recording" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIu-Pg-5yA">
+                        <rect key="frame" x="38" y="17" width="139" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" name="PlayPauseColorButton"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
-                <color key="backgroundColor" red="0.92519408459999997" green="0.92229080200000002" blue="0.88234788180000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                <color key="backgroundColor" name="PrimaryColor"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="qEb-wf-Oos" secondAttribute="bottom" constant="80" id="CAH-lk-O2h"/>
-                    <constraint firstItem="qEb-wf-Oos" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="EvH-Ga-q3L"/>
+                    <constraint firstItem="qEb-wf-Oos" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0Pm-n8-8VG"/>
+                    <constraint firstItem="H0B-OQ-N3h" firstAttribute="leading" secondItem="GIu-Pg-5yA" secondAttribute="trailing" constant="22" id="DqB-YY-q25"/>
+                    <constraint firstItem="GIu-Pg-5yA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="FcZ-8A-kyC"/>
                     <constraint firstItem="GIu-Pg-5yA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="38" id="OGf-II-i6k"/>
-                    <constraint firstItem="qEb-wf-Oos" firstAttribute="leading" secondItem="GIu-Pg-5yA" secondAttribute="trailing" constant="177.66999999999999" id="OIz-5c-dZJ"/>
-                    <constraint firstAttribute="bottom" secondItem="GIu-Pg-5yA" secondAttribute="bottom" constant="20" id="OTr-He-UHh"/>
-                    <constraint firstAttribute="bottom" secondItem="qEb-wf-Oos" secondAttribute="bottom" constant="10" id="YfP-MI-Bdb"/>
-                    <constraint firstAttribute="trailing" secondItem="qEb-wf-Oos" secondAttribute="trailing" constant="30" id="k8i-oS-eQZ"/>
-                    <constraint firstItem="GIu-Pg-5yA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="tzz-W4-eaG"/>
+                    <constraint firstAttribute="bottom" secondItem="GIu-Pg-5yA" secondAttribute="bottom" constant="18" id="Qqc-WE-KaC"/>
+                    <constraint firstAttribute="bottom" secondItem="H0B-OQ-N3h" secondAttribute="bottom" constant="20" id="dLX-AN-yLX"/>
+                    <constraint firstAttribute="trailing" secondItem="qEb-wf-Oos" secondAttribute="trailing" constant="46" id="efV-Bl-PCS"/>
+                    <constraint firstItem="H0B-OQ-N3h" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="itw-HY-cxE"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="123.84615384615384" y="181.27962085308056"/>
+            <point key="canvasLocation" x="173.84615384615384" y="189.81042654028434"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="LightMode copy" width="160" height="161"/>
+        <namedColor name="PlayPauseColorButton">
+            <color red="0.22400000691413879" green="0.29800000786781311" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="PrimaryColor">
+            <color red="0.96100002527236938" green="0.9570000171661377" blue="0.93699997663497925" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
