--- a/MuzyNew/Cell/ifTappedButton.xib
+++ b/MuzyNew/Cell/ifTappedButton.xib
@@ -1,64 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SF-Pro-Display-Regular.otf">
+            <string>SFProDisplay-Regular</string>
+        </array>
+        <array key="SF-Pro-Display-Semibold.otf">
+            <string>SFProDisplay-Semibold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom2" rowHeight="94" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="IfTappedCell" customModule="MuzyNew" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="94"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom2" rowHeight="64" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="IfTappedCell" customModule="MuzyNew" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="388" height="56"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="94"/>
+                <rect key="frame" x="0.0" y="0.0" width="388" height="56"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hzj-SR-p0V">
-                        <rect key="frame" x="16" y="14" width="41.5" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2m-Na-euj">
+                        <rect key="frame" x="38" y="32" width="32" height="10"/>
+                        <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="12"/>
+                        <color key="textColor" name="PlayPauseColorButton"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2m-Na-euj">
-                        <rect key="frame" x="16" y="50" width="31" height="15"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahW-4V-BhI">
-                        <rect key="frame" x="334" y="50" width="31" height="15"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gd2-qO-4di">
-                        <rect key="frame" x="248" y="32" width="46" height="30"/>
-                        <state key="normal" title="Button"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gd2-qO-4di">
+                        <rect key="frame" x="302" y="8" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="MRj-Fa-8Em"/>
+                            <constraint firstAttribute="width" constant="40" id="dAK-g7-HgV"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="LightMode"/>
                         <connections>
                             <action selector="pauseRecording:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="IGQ-Hc-bZq"/>
                         </connections>
                     </button>
                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="wQS-Ft-2Nh">
-                        <rect key="frame" x="53" y="43" width="131" height="34"/>
+                        <rect key="frame" x="76" y="24" width="152" height="23"/>
                     </slider>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Sample Recording" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hzj-SR-p0V">
+                        <rect key="frame" x="37.999999999999993" y="12" width="99.333333333333314" height="14"/>
+                        <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="12"/>
+                        <color key="textColor" name="PlayPauseColorButton"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahW-4V-BhI">
+                        <rect key="frame" x="234" y="30" width="30" height="10"/>
+                        <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="12"/>
+                        <color key="textColor" name="PlayPauseColorButton"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" name="PrimaryColor"/>
                 <constraints>
-                    <constraint firstItem="Hzj-SR-p0V" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="1GB-D0-HOz"/>
-                    <constraint firstAttribute="bottom" secondItem="P2m-Na-euj" secondAttribute="bottom" constant="29" id="3yo-Zj-xwa"/>
-                    <constraint firstItem="P2m-Na-euj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4PJ-e6-CPS"/>
-                    <constraint firstItem="gd2-qO-4di" firstAttribute="leading" secondItem="wQS-Ft-2Nh" secondAttribute="trailing" constant="66" id="6bp-Ay-N4M"/>
-                    <constraint firstItem="ahW-4V-BhI" firstAttribute="leading" secondItem="gd2-qO-4di" secondAttribute="trailing" constant="40" id="CLt-UH-Kxf"/>
-                    <constraint firstAttribute="bottom" secondItem="gd2-qO-4di" secondAttribute="bottom" constant="32" id="EQ3-ac-HAy"/>
-                    <constraint firstItem="Hzj-SR-p0V" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Ehn-Ki-9gI"/>
-                    <constraint firstItem="P2m-Na-euj" firstAttribute="top" secondItem="Hzj-SR-p0V" secondAttribute="bottom" constant="15" id="KvE-6i-rea"/>
-                    <constraint firstItem="wQS-Ft-2Nh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="43" id="Vfa-dV-hbI"/>
-                    <constraint firstItem="wQS-Ft-2Nh" firstAttribute="leading" secondItem="P2m-Na-euj" secondAttribute="trailing" constant="8" id="d4b-y6-IUf"/>
-                    <constraint firstItem="gd2-qO-4di" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="32" id="qTX-i0-iYu"/>
-                    <constraint firstAttribute="bottom" secondItem="wQS-Ft-2Nh" secondAttribute="bottom" constant="18" id="saT-xq-tuj"/>
-                    <constraint firstAttribute="bottom" secondItem="ahW-4V-BhI" secondAttribute="bottom" constant="29" id="wGP-Ja-fd1"/>
-                    <constraint firstItem="gd2-qO-4di" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="trailing" constant="-72" id="xnd-Eh-U86"/>
+                    <constraint firstItem="wQS-Ft-2Nh" firstAttribute="leading" secondItem="P2m-Na-euj" secondAttribute="trailing" constant="8" id="1In-Xy-uAm"/>
+                    <constraint firstItem="ahW-4V-BhI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="30" id="71L-su-Svd"/>
+                    <constraint firstAttribute="bottom" secondItem="P2m-Na-euj" secondAttribute="bottom" constant="14" id="Jvv-y2-cl2"/>
+                    <constraint firstItem="wQS-Ft-2Nh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="24" id="KUZ-0n-eAy"/>
+                    <constraint firstItem="P2m-Na-euj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="38" id="Q7A-jR-jdr"/>
+                    <constraint firstItem="wQS-Ft-2Nh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="78" id="QxU-KN-WQm"/>
+                    <constraint firstAttribute="trailing" secondItem="wQS-Ft-2Nh" secondAttribute="trailing" constant="162" id="WJ0-am-elB"/>
+                    <constraint firstItem="P2m-Na-euj" firstAttribute="top" secondItem="Hzj-SR-p0V" secondAttribute="bottom" constant="6" id="dos-Ol-KKk"/>
+                    <constraint firstAttribute="bottom" secondItem="wQS-Ft-2Nh" secondAttribute="bottom" constant="10" id="lHQ-96-5z3"/>
+                    <constraint firstItem="Hzj-SR-p0V" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="38" id="mMQ-O3-8GK"/>
+                    <constraint firstItem="ahW-4V-BhI" firstAttribute="leading" secondItem="wQS-Ft-2Nh" secondAttribute="trailing" constant="8" symbolic="YES" id="mZM-pz-x3Z"/>
+                    <constraint firstAttribute="bottom" secondItem="ahW-4V-BhI" secondAttribute="bottom" constant="16" id="sWb-hP-cT9"/>
+                    <constraint firstItem="gd2-qO-4di" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="tv3-nC-2yN"/>
+                    <constraint firstItem="Hzj-SR-p0V" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="uyz-wZ-mNe"/>
+                    <constraint firstAttribute="trailing" secondItem="gd2-qO-4di" secondAttribute="trailing" constant="46" id="zMh-Sa-87n"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -68,7 +83,16 @@
                 <outlet property="pauseBtn" destination="gd2-qO-4di" id="Msd-Ab-4iD"/>
                 <outlet property="startTimeLbl" destination="P2m-Na-euj" id="NvA-Iv-rqb"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="117.85714285714285"/>
+            <point key="canvasLocation" x="180" y="127.25118483412322"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="LightMode" width="160" height="161"/>
+        <namedColor name="PlayPauseColorButton">
+            <color red="0.22400000691413879" green="0.29800000786781311" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="PrimaryColor">
+            <color red="0.96100002527236938" green="0.9570000171661377" blue="0.93699997663497925" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
